# pattern-mirror

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  sonar-project.properties
.claude/: settings.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/src/pattern_mirror/: __init__.py  main.py
backend/src/pattern_mirror/api/: __init__.py  analyze.py  auth.py  deps.py  documents.py  drift.py  growth.py  health.py  hr.py  interactions.py  patterns.py  resumes.py  schemas.py  sse.py  streaming.py
backend/src/pattern_mirror/core/: __init__.py  config.py  errors.py  logging.py  middleware.py
backend/src/pattern_mirror/db/: __init__.py  base.py  session.py
backend/src/pattern_mirror/db/migrations/: env.py
backend/src/pattern_mirror/db/migrations/versions/: 0001_foundation.py  0002_seed_sg_bias_lexicon.py  0003_extend_disability_lexicon.py  0004_add_superseded_run_status.py  0005_remove_severity.py  0006_drop_judge_hallucination.py  0007_add_flag_recommendations.py  0008_add_flag_interactions.py  0009_add_calibration_runs.py  0010_dictionary_growth_schema.py  0011_growth_approval.py  0012_add_drift_agent_name.py  0013_add_drift_findings.py  0014_add_jd_criteria.py  0015_add_peer_feedback.py  0016_add_promotion_rubric.py  0017_reference_kind_rubric.py  0018_add_jd_criteria_drafter.py  0019_dictionary_recs.py
backend/src/pattern_mirror/engine/: __init__.py  adjudicator.py  calibration.py  candidate_flag.py  citations.py  contextual_pass.py  dictionary.py  drift.py  fingerprint.py  jd_criteria_extraction.py  judge.py  lemmatiser.py  llm_agent.py  orchestrator.py  recommendations.py  state.py  suppression.py  tokenisation.py  verdict.py
backend/src/pattern_mirror/engine/growth/: __init__.py  agents.py  review.py
backend/src/pattern_mirror/jobs/: __init__.py  calibrate.py  demo_dataset.py  gold_set.py  growth.py  resume_fixtures.py  seed_demo.py  seed_demo_analysis.py  seed_demo_behaviour.py  seed_growth_demo.py
backend/src/pattern_mirror/jobs/seed_data/: demo_dataset.json  gold_set.json
backend/src/pattern_mirror/models/: __init__.py  audit.py  calibration.py  columns.py  dictionary.py  documents.py  drift.py  engine.py  enums.py  growth.py  identity.py  jd_criteria.py  mixins.py  peer_corroboration.py  peer_feedback.py  promotion_rubric.py  reference.py
backend/src/pattern_mirror/services/: __init__.py  agent_runs.py  analysis.py  auth.py  behavioural_states.py  blob_storage.py  calibration.py  calibration_runs.py  dictionary_approval.py  dictionary_growth.py  documents.py  drift_findings.py  drift_interactions.py  drift_reference.py  flag_outcomes.py  growth_audit.py  growth_trigger.py  hr_aggregates.py  interactions.py  jd_criteria.py  pattern_aggregator.py  pattern_cache.py  resumes.py  run_registry.py  significance.py  streaming_analysis.py
backend/tests/: conftest.py
backend/tests/api/: test_analyze.py  test_auth.py  test_documents.py  test_documents_flags.py  test_drift.py  test_growth.py  test_health.py  test_hr.py  test_interactions.py  test_jd_criteria.py  test_patterns.py  test_resumes.py  test_sse.py  test_streaming.py
backend/tests/core/: test_config.py  test_logging.py
backend/tests/db/: test_isolation.py  test_schema.py  test_seed_lexicon.py
backend/tests/engine/: test_adjudicator.py  test_calibration.py  test_contextual_pass.py  test_dictionary.py  test_drift.py  test_fingerprint.py  test_jd_criteria_extraction.py  test_judge.py  test_lemmatiser.py  test_llm_agent.py  test_orchestrator.py  test_recommendations.py  test_state.py  test_suppression.py  test_tokenisation.py  test_verdict.py
backend/tests/engine/growth/: test_agents.py  test_review.py
backend/tests/jobs/: test_calibrate.py  test_demo_dataset.py  test_demo_dataset_significance.py  test_gold_set.py  test_growth.py  test_resume_fixtures.py  test_seed_demo.py  test_seed_demo_analysis.py  test_seed_demo_behaviour.py  test_seed_growth_demo.py
backend/tests/services/: test_agent_runs.py  test_analysis.py  test_auth.py  test_behavioural_states.py  test_blob_storage.py  test_calibration.py  test_calibration_runs.py  test_dictionary_approval.py  test_dictionary_growth.py  test_documents.py  test_documents_flags.py  test_drift_findings.py  test_drift_interactions.py  test_drift_reference.py  test_growth_audit.py  test_growth_trigger.py  test_hr_aggregates.py  test_interactions.py  test_jd_criteria.py  test_pattern_aggregator.py  test_pattern_cache.py  test_resumes.py  test_run_registry.py  test_significance.py  test_streaming_analysis.py
deploy/: docker-compose.yml
deploy/postgres-init/: 01-create-test-db.sql
docs/: CODE_STYLE.md  CONVENTIONS.md  DESIGN_SPEC.md  README.md  future.md  project-management.md
docs/adr/: 0001-design-handoff-adoption.md  0002-frontend-foundation-stack.md  0003-database-schema-foundation.md  0004-ci-pipeline.md  0005-sonarcloud.md  (+8 more)
frontend/: .env.example  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts
(+200 files in other folders)
