[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pattern-mirror"
description = "Longitudinal bias-pattern analysis service for pattern-mirror."
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "alembic>=1.14.0",
    "anthropic>=0.112.0",
    "en-core-web-sm",
    "fastapi>=0.137.1",
    "instructor>=1.15.3",
    "langgraph>=1.2.6",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "spacy>=3.8,<3.9",
    "sqlalchemy>=2.0.36",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

# Single source of version truth: read __version__ from the package itself
# rather than duplicating the string here.
[tool.hatch.version]
path = "src/pattern_mirror/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pattern_mirror"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["pattern_mirror"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]
# Alembic revisions use the framework's dynamic op/context API and are verified
# by running them (upgrade/downgrade/check), not by strict typing.
exclude = ["^src/pattern_mirror/db/migrations/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "db: test requires a reachable PostgreSQL database (skipped if unavailable)",
]

# Coverage feeds SonarCloud's quality gate; CI runs pytest with --cov and emits
# coverage.xml. Migrations are excluded — they're verified by running, not by line cover.
[tool.coverage.run]
branch = true
source = ["pattern_mirror"]
omit = ["src/pattern_mirror/db/migrations/*"]

# The model wheel is built for one spaCy minor (3.8.0 needs spaCy >=3.8,<3.9);
# bump this URL and the spacy pin together or spacy.load() warns on mismatch.
[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.17",
]
